--- a/config.json
+++ b/config.json
@@ -1,4 +1,4 @@
 { 
-	"prefix": "!",
-	"token": "<insert your key here"
+	"prefix": ">",
+	"token": "NDU0MTE3OTg2NTE3Nzc4NDQy.D0ImRg.cMKq6wvuRqXASh36_sv6e-np-H8"
 }
